--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,65 @@
 {
     "manifest_version": 2,
-    "name": "SIGAA-Themes",
-    "version": "1.0",
+    "name": "SIGATEMAS",
+    "version": "1.1",
   
-    "description": "Adiciona temas ao SIGAA",
+    "description": "Adiciona tema ao SIGAA",
   
-    "homepage_url": "https://github.com/mdn/webextensions-examples/tree/main/beastify",
+    "homepage_url": "https://github.com/vistomia/sigaa-themes",
 
     "icons": {
-      "48": "icons/border-48.png"
+      "48": "icons/icon-48.png"
     },
-    "permissions": ["activeTab", "storage"],
+    "permissions": ["activeTab", "storage", "tabs"],
     "content_scripts": [
       {
         "matches": ["https://si3.ufc.br/*"],
-        "css": ["dark-theme.css"],
-        "js": ["theme.js"]
+        "js": ["theme.js"],
+        "css": ["css/theme.css"],
+        "run_at": "document_start"
+      },
+      {
+        "matches": ["https://si3.ufc.br/sigaa/verTelaLogin.do*"],
+        "js": ["theme.js"],
+        "css": ["css/verTelaLogin.css"],
+        "run_at": "document_start"
+      },
+      {
+        "matches": ["https://si3.ufc.br/sigaa/telaAvisoLogon.jsf*"],
+        "js": ["theme.js"],
+        "css": ["css/telaAvisoLogon.css"],
+        "run_at": "document_start"
+      },
+      {
+        "matches": ["https://si3.ufc.br/sigaa/paginaInicial.do*"],
+        "js": ["theme.js"],
+        "css": ["css/paginaInicial.css"],
+        "run_at": "document_start"
+      },
+      {
+        "matches": ["https://si3.ufc.br/sigaa/portais/discente/discente.jsf*"],
+        "js": ["theme.js"],
+        "css": ["css/discente.css"],
+        "run_at": "document_start"
       }
     ],
 
+    "web_accessible_resources": [
+      "css/theme.css",
+      "css/verTelaLogin.css",
+      "css/telaAvisoLogon.css",
+      "css/discente.css"
+    ],
+
     "browser_action": {
-        "default_icon": "icons/beasts-32.png",
-        "default_title": "Beastify",
-        "default_popup": "popup/choose_theme.html"
+      "default_icon": "icons/icon-48.png",
+      "default_title": "SIGATEMAS",
+      "default_popup": "popup/choose_theme.html"
+    },
+
+    "browser_specific_settings": {
+      "gecko": {
+        "id": "sigaa-themes@vistomia"
+      }
     }
 }
